upload registration page

--- a/cidr2019/registration.html
+++ b/cidr2019/registration.html
@@ -139,11 +139,11 @@
 				<!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 				<li><a href="../index.html">Previous Conferences</a>
 					<ul>
-						<li><a href="http://cidrdb.org/cidr2017/index.html">CIDR
+						<li><a href="../cidr2017/index.html">CIDR
 								2017</a></li>
-						<li><a href="http://cidrdb.org/cidr2015/index.html">CIDR
+						<li><a href="../cidr2015/index.html">CIDR
 								2015</a></li>
-						<li><a href="http://cidrdb.org/cidr2013/index.html">CIDR
+						<li><a href="../cidr2013/index.html">CIDR
 								2013</a></li>
 						<li><a href="../cidr2011/index.html">CIDR 2011</a></li>
 						<li><a href="../cidr2009/index.html">CIDR 2009</a></li>
@@ -173,7 +173,62 @@
 
 
 			<p>
-				<!--
+			
+	To register for CIDR 2019 and to book your room at Asilomar, please use this
+	link: <li><a href="https://book.passkey.com/e/49813763">CIDR registration</a>
+
+	</p>
+	<p>
+	NOTE: you must use this link to register and to reserve a room, i.e., do
+	not contact Asilomar Conference Center directly to book your room.
+	</p>
+	<p>
+	At this time, partial day registration and off-site registration are not
+	options. You must register for all three days of the conference.
+	Of course, you may stay off-site at your own expense but we encourage
+	everyone to stay at the conference grounds to facilitate interaction.
+	</p>
+	<p>
+	Participants may arrive before the conference or stay afterward and will be
+	charged the standard Asilomar guest rate. That rate includes lodging, meals
+	in the Crocker dining hall and access to all facilities.
+	</p>
+	<p>
+	Guests and family members are welcome to stay with participants but they
+	cannot take part in conference activities and they will have to pay the
+	standard Asilomar guest rate.
+	</p>
+	<p>
+	The Guest Information form on the registration site includes a section 
+	for Other Information. For shared rooms, roommate requests should be
+	specified here.
+	</p>
+	<p>
+	Asilomar offers vegetarian, vegan and gluten-free meal options. These may
+	be selected during registration. Please specify any food allergies in the
+Other Information section mentioned above. Do not bother specifying a meat
+preference (beef/pork/poultry/seafood) because participants will be asked
+for their meat choice at a later date closer to the conference start. Other
+dietary preferences may be noted but may not necessarily be honored and
+will have to be arranged on a case-by-case basis and at extra expense to
+the participant.
+	</p>
+	<p>
+	You may cancel your registration for a full refund (minus a $100 fee) before December 12. After that date, no refunds will be made.
+</p>
+	<p>
+Finally, if you phone Asilomar directly and have to leave a message, note
+that they cannot return phone calls to international numbers. So, international
+participants should use email in that case.
+</p>
+
+
+<p>
+				Questions, concerns, comments: contact <a
+					href="mailto:w.kevin.wilkinson@gmail.com">Kevin Wilkinson</a> (CIDR
+				Local Arrangments)
+			</p>
+<!--
 		  <h3>
                   <b> The conference is sold out. We can no longer accept registrations. </b> 
                  </h3>
@@ -187,100 +242,10 @@
 							first come first serve basis until capacity filled.
 				</ul>
 				<p>
-					CIDR 2017 will be held at <a href="http://www.chaminade.com">Chaminade
-						Resort & Spa</a>, a mountaintop hotel on 300 acres in Santa Cruz,
-					California. Chaminade is a 75 minute drive from San Francisco
-					airport and just 45 minutes from San Jose airport. Chaminade
-					features modern, spacious guest rooms in eleven villas nestled
-					among eucalyptus and redwood forests. The resort includes a fitness
-					center, pool, hot tub, spa services, hiking trails and tennis. The
-					conference center has sweeping views of Monterey Bay and the Santa
-					Cruz mountains. It is a relatively small resort so CIDR will occupy
-					most, if not all, of the space.
-				</p>
-				<div id="slideshow" position="center">
-					<img src="img/image1.jpg" alt="Slideshow Image 1" width="580"
-						height="300" class="active" /> <img src="img/image2.jpg"
-						alt="Slideshow Image 2" width="580" height="300" /> <img
-						src="img/image3.jpg" alt="Slideshow Image 3" width="580"
-						height="300" /> <img src="img/image4.jpg" alt="Slideshow Image 4"
-						width="580" height="300" />
-				</div>
-
-				<h3>Registration Options</h3>
-
-				<ul>
-					<li>Regular registration: single room is $1,125, shared room
-						is $805</li>
-
-					<li>Student registration: single room is $1,025, shared room
-						is $705</li>
-				</ul>
-			<p>Rooms have either a single, king bed or two double beds.</p>
-			<p>The registration fee covers lodging for three nights, from
-				Sunday, Jan. 8 to Wednesday, Jan. 11 plus food during the
-				conference. <b>If you must arrive late or leave early, you will still
-				be charged for the entire conference.</b> There is no day rate, i.e., no
-				option for lodging off-site.</p>
-			<p>For attendees who wish to stay longer, i.e., arrive before
-				Jan. 8 or depart after Jan. 11, a special rate is available but you
-				must contact Chaminade to make arrangements. Similarly, a special
-				rate is available for family members or guests who accompany
-				attendees. Contact Chaminade for details.</p>
-			<p>There is no direct public transportation to Chaminade.
-				However, taxis are available from downtown Santa Cruz which is 3
-				miles away.</p>
-			<h3>Registration Instructions</h3>
-			<p>Connect to the Chaminade registration page for regular
-				attendees or students using one of the links below.
-				Check-in/Check-out: Specify your arrival and departure dates. As
-				mentioned above, if you arrive late or leave early, you will still
-				be charged for the full conference upon check-out and departure from
-				the Chaminade resort.</p>
-
-			<ul>
-				<li>Rooms: specify 1</li>
-
-				<li>Adults: specify 1</li>
-			</ul>
-			<p>Shared rooms: if you want to share a room with another CIDR
-				2017 attendee, you should first find a roommate on your own (CIDR
-				does not provide a matching service). Then, register for a single
-				room (choose a king or double bed as you wish) and inform Chaminade
-				the name of your roommate. You may call or email them or specify the
-				name in the Comments section under Special Requests. Discount code:
-				there is no discount code</p>
-
-			<p>
-				<b>Note about Total Charges:</b> due to limitations with the
-				Chaminade website, the total charges shown on the registration page
-				do NOT match what you will be charged at check-out upon departure
-				from Chaminade. For example, shared room attendees will see total
-				charges for a single room. Charges for private room attendees will
-				be close to the correct number but will be a little low. So, do not
-				be alarmed by the number shown for Total Charges. It will be
-				corrected at check-out.
-			</p>
-
-			<p>Please follow the appropriate link for the registration.</p>
-			<ul>
-				<li><a
-					href="http://bookings.ihotelier.com/bookings.jsp?groupID=1564586&hotelID=15334">Regular
-						registration</a></li>
-				<li><a
-					href="http://bookings.ihotelier.com/bookings.jsp?groupID=1714620&hotelID=15334">Student
-						registration</a></li>
-			</ul>
-			<p>
-				Questions, concerns, comments: contact <a
-					href="mailto:kevinwilkinson1@acm.org">Kevin Wilkinson</a> (CIDR
-				Local Arrangments)
-			</p>
-
- -->
 
 
-			<!--
+
+
 <TABLE cellpadding="2" cellspacing="0">
 <TR id="row1">
 <TD><b>Private Room (Historic)</b></TD>  <TD>$847.43 per person 
