update keynote speakers

--- a/cidr2019/keynotespeakers.html
+++ b/cidr2019/keynotespeakers.html
@@ -66,7 +66,7 @@
 	 
 <!--	 <p><b>Gongshow Awards:  Michael J. Franklin (University of Chicago) with "Mike Franklin Spits Fire
 "</b></p>-->
-<iframe src="MRamsey_bio.html"
+<iframe src="Keynote_speakers_content.html"
 	width="600"              // width of iframe should match the width of containing div
 	height="5500"             // height of iframe should match the height of containing div
 	marginwidth="2"          // width of iframe margin
