fixed magdas affiliation

--- a/cidr2019/org.html
+++ b/cidr2019/org.html
@@ -78,7 +78,7 @@
 		
                  <h3>Program Committee Chairs</h3>
 		<ul> 
-		<li><b>Magdalena Balazinska (lead chair)</b>, University of Washington</li>
+		<li><b>Magdalena Balazinska (lead chair)</b>, University of Washington and Google</li>
 		<li><b>Jignesh Patel</b>, University of Wisconsin-Madison</li>
 		<li><b>Michael Stonebraker</b>, MIT</li>
 		</ul> 
