--- a/cidr2019/Keynote_speakers_content.html
+++ b/cidr2019/Keynote_speakers_content.html
@@ -886,7 +886,7 @@ recognized as one of the Top 100 Innovators in data &amp; analytics.</p>
   croptop="5768f"/>
  <w:wrap type="square"/>
 </v:shape><![endif]--><![if !vml]><img width=111 height=152
-src="Keynote_speakers_content.fld/image003.png" align=left hspace=12 v:shapes="Picture_x0020_4"><![endif]><span
+src="Keynote_speakers_content.fld/image002.jpg" align=left hspace=12 v:shapes="Picture_x0020_4"><![endif]><span
 style='font-size:16.0pt;line-height:115%'><span style='mso-tab-count:3'>                           </span></span><span
 lang=DE style='mso-ansi-language:DE;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
  id="Picture_x0020_4" o:spid="_x0000_i1025" type="#_x0000_t75" style='width:102pt;
