updated gong show schedule

--- a/cidr2019/gongshow.html
+++ b/cidr2019/gongshow.html
@@ -112,8 +112,8 @@
     <td class="paper-info"><b>Bringing Databases up to Pocket-Scale</b><BR/>Carl Nuessle (<em>University of Buffalo, SUNY</em>)</td>
 </tr>
 <tr>
-    <td class="paper-url"><a href="gongshow/abstracts/cidr2019_43.pdf" title="Using Deep Reinforcement Learning for Distributed Query Optimization"><img src="gongshow/img/paper43.png" /></a></td>
-    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2019_43.pdf">Using Deep Reinforcement Learning for Distributed Query Optimization</a></b><BR/>Rebecca Taft (<em>Cockroach DB</em>)</td>
+    <td class="paper-url"><a href="gongshow/abstracts/cidr2019_43.pdf" title="Making Neural Network Optimizers Practical"><img src="gongshow/img/paper43.png" /></a></td>
+    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2019_43.pdf">Making Neural Network Optimizers Practical</a></b><BR/>Rebecca Taft (<em>Cockroach DB</em>)</td>
 </tr>
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2019_160.pdf" title="The End of the x86 Dominance in Databases?"><img src="gongshow/img/paper160.png" /></a></td>
