--- a/cidr2019/program.html
+++ b/cidr2019/program.html
@@ -65,12 +65,12 @@
 <!--	 <p><b>Gongshow Awards:  Michael J. Franklin (University of Chicago) with "Mike Franklin Spits Fire
 "</b></p>-->	  
 <iframe src="CIDR-sessions.html"
-	width="600"    
-	height="5500"          
-	marginwidth="2"          
-	marginheight="2"         
-	frameborder="no"         
-	scrolling="no"
+	width="600"              // width of iframe should match the width of containing div
+<!--	height="5500"             // height of iframe should match the height of containing div -->
+	marginwidth="2"          // width of iframe margin
+	marginheight="2"         // height of iframe margin   
+	frameborder="no"         // frame border preference
+	scrolling="no"          // instructs iframe to scroll overflow content
 	onload="resizeIframe(this)"
 	</iframe>
 
