update gong show

--- a/cidr2019/gongshow.html
+++ b/cidr2019/gongshow.html
@@ -108,8 +108,8 @@
     <td class="paper-info"><b><a href="gongshow/abstracts/cidr2019_138.pdf">Query-Driven Data Cleaning for Exploratory Queries</a></b><BR/>Stella Giannakopoulou (<em>EPFL</em>)</td>
 </tr>
 <tr>
-    <td class="paper-url"><img src="gongshow/img/missing.png" /></td>
-    <td class="paper-info"><b>Bringing Databases up to Pocket-Scale</b><BR/>Carl Nuessle (<em>University of Buffalo, SUNY</em>)</td>
+    <td class="paper-url"><a href="gongshow/abstracts/cidr2019_159.pdf" title="Bringing Databases up to Pocket-Scale"><img src="gongshow/img/paper159.png" /></a></td>
+    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2019_159.pdf">Bringing Databases up to Pocket-Scale</a></b><BR/>Carl Nuessle (<em>University of Buffalo, SUNY</em>)</td>
 </tr>
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2019_43.pdf" title="Making Neural Network Optimizers Practical"><img src="gongshow/img/paper43.png" /></a></td>
@@ -144,8 +144,8 @@
     <td class="paper-info"><b><a href="gongshow/abstracts/cidr2019_140.pdf">Serverless Foundations for Elastic Database Systems</a></b><BR/>Johann Schleier-Smith (<em>UC Berkeley</em>)</td>
 </tr>
 <tr>
-    <td class="paper-url"><img src="gongshow/img/missing.png" /></td>
-    <td class="paper-info"><b>Pat Helland Live!</b><BR/>Pat Helland (<em>Salesforce</em>)</td>
+    <td class="paper-url"><a href="gongshow/abstracts/cidr2019_161.pdf" title="The I's Have It: Identity, Immutability, Idempotence, and Interchangeability Form the Backbone of Distributed Computing"><img src="gongshow/img/paper161.png" /></a></td>
+    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2019_161.pdf">The I's Have It: Identity, Immutability, Idempotence, and Interchangeability Form the Backbone of Distributed Computing</a></b><BR/>Pat Helland (<em>Salesforce</em>)</td>
 </tr>
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2019_162.pdf" title="Tools for Advanced Time Series Analytics: Enabling the Future"><img src="gongshow/img/paper162.png" /></a></td>
