--- a/cidr2020/org.html
+++ b/cidr2020/org.html
@@ -75,7 +75,7 @@
 		</ul>
 		<h3>Local Arrangement Chair</h3>
 		<ul> 
-		<li>TBD</li>
+		<li><b>Stefan Manegold</b> CWI</li>
 		</ul>
 		
                  <h3>Program Committee Chairs</h3>
