changed notification deadline

--- a/cidr2020/index.html
+++ b/cidr2020/index.html
@@ -118,7 +118,7 @@ document.write('</div>');
 		<p>
 		  The  Conference on Innovative Data Systems Research (CIDR) is a systems-oriented conference, complementary in its mission to the mainstream database conferences like SIGMOD and VLDB, emphasizing the systems architecture perspective. 
 		  CIDR was run every two years starting 2003, becoming the premier conference for practical data systems work. From 2020 on, the conference is organized every year, alternating between Amsterdam (even years) and the USA (odd years).  
-		  The Amsterdam venue of the conference is the Movenpick hotel on the waterfront of the Amsterdam city center.
+		  The Amsterdam venue of the conference is the Mövenpick hotel on the waterfront of the Amsterdam city center.
 		  	<p>
 		CIDR will retain its characteristics, such as single-track keynote, paper and demo presentations by senior authors as well as evening sessions, including gong show, and plenty of time for interaction. 
 		CIDR gathers researchers and practitioners from both academia and industry to discuss the latest innovative and visionary ideas in the field. 
@@ -133,7 +133,7 @@ document.write('</div>');
 		<h3>Important Dates</h3><b>(all deadlines are 11:59pm Pacific Time)</b>
 		<ul> 
 		<li><b>August 23, 2019: Submission deadline for all submissions</li>
-		<li><b>October 21, 2019: author notification for all submissions</li>
+		<li><b>October 14, 2019: author notification for all submissions</li>
 		<li><b>December 16, 2019: camera-ready deadline for all submissions</li>
 		<li><b>January 12-15, 2020: conference</li>
 		<ul>
