--- a/cidr2020/org.html
+++ b/cidr2020/org.html
@@ -71,7 +71,8 @@
 		<p>
                   <h3>General Chair</h3>
 		<ul> 
-		<li>TBD</li>
+		<li>Anastasia Ailamaki, EPFL</li>
+				<li>Michael Stonebraer, MIT</li>
 		</ul>
 		<h3>Local Arrangement Chair</h3>
 		<ul> 
