--- a/cidr2020/cfp.html
+++ b/cidr2020/cfp.html
@@ -95,69 +95,32 @@ contributions
 
 	<h3>Registration</h3>
 	<ul>
-	TBD
-<!--<li><strong>Before November 5, 2018</strong>: early
+
+<li><strong>Before October 28, 2019</strong>: early
 	registration for authors of abstracts and submitted papers and demos.
-	<li><strong>After November 5, 2018</strong>:
+	<li><strong>After October 28, 2019</strong>:
 registration on first come first serve basis until capacity is reached.
--->	
+
 </ul>
 	
 
 
 </br>
 <h3>Overview</h3>
-<!--
-<p>
-	The biennial Conference on Innovative Data Systems Research
-	(CIDR) is a systems-oriented conference, complementary in its
-	mission to the mainstream database conferences like SIGMOD
-	and VLDB, emphasizing the systems architecture perspective.
-	CIDR gathers researchers and practitioners from both academia
-	and industry to discuss the latest innovative and visionary
-	ideas in the field.
-	<p>
-We invite contributions on novel approaches to data
-management systems, architecture, and usage. CIDR encourages
-contributions about innovative and risky data management
-system architecture ideas, systems-building experience and
-insight, resourceful experimental studies, and provocative
-position statements. CIDR especially values innovation,
-experience-based insight, and vision.
 
 <p>
-	This year, CIDR invites three kinds of contributions: (a)
-	papers (at most 6 pages). To encourage authors to submit
-	only their best work, each person can be an author or
-	co-author of only a single paper or demo. (b) demos (a
-	video or a description of the demo in at most 6 pages).
-	Authors who feel their work is best captured through a demo
-	should submit a demo proposal. Demos and papers will be
-	interweaved in a single-tracked program. (c) abstracts (at
-	most 1 page). If you have an idea that is too half-baked
-	for a paper or demo proposal, you may submit an abstract.
-	Any author of a paper or demo may additionally submit one
-	abstract. Abstracts are expected to have a single author.
-	Abstracts will be allotted a shorter amount of presentation
-	time than papers and demos, and historically these have
-	been presented in an evening “gong show”.
+	The annual Conference on Innovative Data Systems Research (CIDR) is a systems-oriented conference, complementary in its mission to the mainstream database conferences like SIGMOD and VLDB, emphasizing the systems architecture perspective. CIDR gathers researchers and practitioners from both academia and industry to discuss the latest innovative and visionary ideas in the field.
+	<p>
+We invite contributions on novel approaches to data management systems, architecture, and usage. CIDR encourages contributions about innovative and risky data management system architecture ideas, systems-building experience and insight, resourceful experimental studies, and provocative position statements. CIDR especially values innovation, experience-based insight, and vision.
+
+<p>
+	This year, CIDR invites three kinds of contributions: (a) papers (at most 6 pages). We invite both regular research papers and more visionary papers that promote interesting ideas and ongoing work. To encourage authors to submit only their best work, each person can be an author or co-author of at most two submissions in total of kind a) and b). (b) demos (a video or a description of the demo in at most 6 pages). Authors who feel their work is best captured through a demo should submit a demo proposal. Demos and papers will be interweaved in a single-tracked program. (c) abstracts (at most 1 page). If you have an idea that is too half-baked for a paper or demo proposal, you may submit an abstract. Any author of a paper or demo may additionally submit one abstract. Abstracts are expected to have a single author. Abstracts will be allotted a shorter amount of presentation time than papers and demos, and historically these have been presented in an evening “gong show”.
 
 	<p>Abstracts, papers and demos will be reviewed by the
 program committee, who will select the final program in
 co-operation with the organizing committee.
 	<p>
-The number of participants at CIDR is limited to allow an
-intimate single-track experience. In the past, CIDR
-reached maximum capacity several weeks before the
-conference. As in the past, registration for the 2019
-conference will be carried out in two phases. Authors who
-submitted an abstract or co-authored a paper or demo
-submission are invited to register before November 5th
-(independent of acceptance). After November 5th,
-registration is on a first-come-first-serve basis until
-the conference capacity is reached. So, if you plan to
-attend the conference, please, submit at least an
-abstract.
+The number of participants at CIDR is limited to allow an intimate single-track experience. In the past, CIDR reached maximum capacity several weeks before the conference. As in the past, registration for the 2020 conference will be carried out in two phases. Authors who submitted an abstract or co-authored a paper or demo submission are invited to register before October 28th (independent of acceptance). After October 28th, registration is on a first-come-first-serve basis until the conference capacity is reached. So, if you plan to attend the conference, please, submit at least an abstract.
 
 <p>
 
@@ -168,20 +131,10 @@ abstract.
 <p>
 	<b>Papers should be electronically submitted in pdf
 format to <a
-href="https://cmt3.research.microsoft.com/CIDR2019">https://cmt.research.microsoft.com/CIDR2019</a>.
+href="https://cmt3.research.microsoft.com/CIDR2020">https://cmt3.research.microsoft.com/CIDR2020</a>.
 	</b>
 	<p>
-		Topics of interest include but are not limited to:
-		database systems, storage management, transaction processing, cloud computing,
-		massive data analysis, software service
-		infrastructure, scalability and dependability,
-		embedded and sensor databases, user interfaces,
-		information integration and data cleaning
-		architectures, information retrieval, declarative
-		systems, data management in networks, benchmarking and
-		experimental methodology, and databases for ML and ML for databases. We also welcome submissions
-		on thought-provoking applications and emerging uses of
-		data management technology.
+		Topics of interest include but are not limited to: database systems, storage management, transaction processing, cloud computing, massive data analysis, software service infrastructure, scalability and dependability, embedded and sensor databases, user interfaces, information integration and data cleaning architectures, information retrieval, declarative systems, data management in networks, benchmarking and experimental methodology, and databases for ML and ML for databases. We also welcome submissions on thought-provoking applications and emerging uses of data management technology.
 	<p> 
 		Submissions must be
 		formatted using the ACM SIG style. (see  <a
@@ -209,11 +162,11 @@ href="https://cmt3.research.microsoft.com/CIDR2019">https://cmt.research.microso
 
 <h3>Camera Ready Guidelines</h3>
 <p>
-Camera-ready papers need to follow the formatting instructions above. Additionally, they need to include the following copyright notice at the bottom left of the first page. This <a href="cidr-2019.cls" download> latex style file</a> and this <a href="pubform-CIDR2019.docx" download> Word template file </a> include the copyright notice. We recommend that you use it, which will display the following information:
+Camera-ready papers need to follow the formatting instructions above. Additionally, they need to include the following copyright notice at the bottom left of the first page. This <a href="cidr-2019.cls" download> latex style file</a> and this <a href="pubform-CIDR2020.docx" download> Word template file </a> include the copyright notice. We recommend that you use it, which will display the following information:
 <p>
-<i>This article is published under a Creative Commons Attribution License(http://creativecommons.org/licenses/by/3.0/), which permits distribution and reproduction in any medium as well as allowing derivative works, provided that you attribute the original work to the author(s) and CIDR 2019. 9th Biennial Conference on Innovative Data Systems Research (CIDR ’19). January 13-16, 2019, Asilomar, California, USA.</i>
+<i>This article is published under a Creative Commons Attribution License(http://creativecommons.org/licenses/by/3.0/), which permits distribution and reproduction in any medium as well as allowing derivative works, provided that you attribute the original work to the author(s) and CIDR 2020. 10th Annual Conference on Innovative Data Systems Research (CIDR ’20). January 12-15, 2020, Amsterdam, Netherlands.</i>
 </div>
--->
+
 <div id="footer">
 	<p>
 <span>&copy; 2012 <a href="cfp.html#">CIDR Conference</a></span><br />
