--- a/cidr2020/org.html
+++ b/cidr2020/org.html
@@ -99,8 +99,40 @@
 		
 		
 		<h3>Program Committee</h3>
-		<ul> 
-            TBA
+		<ul>
+           <li><b> Gustavo Alonso</b>, ETH</li>
+<li><b>Sihem Amer-Yahia</b>, University of Grenoble</li>
+<li><b>Carsten Binnig</b>, TU Darmstadt</li>
+<li><b>Matthias Boehm</b>, TU Graz</li>
+<li><b>Philippe Bonnet</b>, IT Univ Copenhagen, Denmark</li>
+<li><b>Michael Cafarella</b>, University of Michigan</li>
+<li><b>Shimin Chen</b>, Chinese Academy of Sciences</li>
+<li><b>Brian Cooper</b>, Google</li>
+<li><b>Sudipto Das</b>, Microsoft Research</li>
+<li><b>Jens Dittrich</b>, Saarland University</li>
+<li><b>Aaron Elmore</b>, Chicago University </li>
+<li><b>Johannes Gehrke</b>, Microsoft</li>
+<li><b>Bingsheng He</b>, National University of Singapore</li>
+<li><b>H. V. Jagadish</b>, University of Michigan</li>
+<li><b>Chris Jermaine</b>, Rice University</li>
+<li><b>Alfons Kemper</b>, TUM</li>
+<li><b>Tim Kraska</b>, MIT</li>
+<li><b>Wolfgang Lehner</b>, TU Dresden</li>
+<li><b>Viktor Leis</b>, TUM</li>
+<li><b>Guoliang Li</b>, Tsinghua University</li>
+<li><b>David Lomet</b>, Microsoft Research</li>
+<li><b>Stefan Manegold</b>, CWI</li>
+<li><b>Ioana Manolescu</b>, INRIA</li>
+<li><b>Sergey Melnik</b>, Google</li>
+<li><b>Fatma Ozcan</b>, IBM Research - Almaden</li>
+<li><b>Ippokratis Pandis</b>, Amazon</li>
+<li><b>Olga Papaemmanouil</b>, Brandeis University</li>
+<li><b>Christopher Re</b>, Stanford University</li>
+<li><b>Jennie Rogers</b>, Northwestern University</li>
+<li><b>Eric Sedlar</b>, Oracle</li>
+<li><b>Jens Teubner</b>, TU Dortmund University</li>
+<li><b>Pinar Tozun</b>, ITU Copenhagen</li>
+<li><b>Peter Triantafillou</b>, University of Warwick</li>
                                   
                                   
         </ul>
