fixed Viktors affiliation

--- a/cidr2020/org.html
+++ b/cidr2020/org.html
@@ -72,7 +72,7 @@
                   <h3>General Chair</h3>
 		<ul> 
 		<li>Anastasia Ailamaki, EPFL</li>
-				<li>Michael Stonebraer, MIT</li>
+				<li>Michael Stonebraker, MIT</li>
 		</ul>
 		<h3>Local Arrangement Chair</h3>
 		<ul> 
@@ -118,7 +118,7 @@
 <li><b>Alfons Kemper</b>, TUM</li>
 <li><b>Tim Kraska</b>, MIT</li>
 <li><b>Wolfgang Lehner</b>, TU Dresden</li>
-<li><b>Viktor Leis</b>, TUM</li>
+<li><b>Viktor Leis</b>, Friedrich Schiller University Jena</li>
 <li><b>Guoliang Li</b>, Tsinghua University</li>
 <li><b>David Lomet</b>, Microsoft Research</li>
 <li><b>Stefan Manegold</b>, CWI</li>
