added registration site

--- a/cidr2020/registration.html
+++ b/cidr2020/registration.html
@@ -103,6 +103,13 @@
 }
 </style>
 
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+</style>
+
 
 
 </head>
@@ -153,27 +160,111 @@
 						<li><a href="../cidr2005/index.html">CIDR 2005</a></li>
 						<li><a href="../cidr2003/index.html">CIDR 2003</a></li>
 					</ul></li>
-				<!--
-			<li><a class="current" href="index2.html">2-column layout A</a></li>
-			<li><a href="index3.html">2-column layout B</a></li>
-			<li><a href="print.html">Print stylesheet</a></li>
--->
 			</ul>
 
-			<!--
-		<div class="announce">
-			<p><p>
-			<h2>Site Updates:</h2>
-			<p><strong>Jun 18, 2010:</strong><br />Site Launched!</p>
-			<p class="textright"><a href="#">Sample link &raquo;</a></p>
-		</div>
--->
+
 		</div>
 
 		<div id="contentwide">
 			<h2>Registration</h2>
+<p>
+CIDR 2020 will be held from Sunday, January 12, 2020, to Wednesday, January
+15, 2020, in the Mövenpick Hotel Amsterdam City Centre, Piet Heinkade 11,
+1019 BR Amsterdam, Netherlands.
 
-TBD
+<p>
+To register for CIDR 2019 and to book your room at the <a href="https://eur.cvent.me/K1Q2">Mövenpick Hotel</a>.
+
+
+<p>
+NOTE: you must use the above link to register and to reserve a room, i.e., do not
+contact the Mövenpick Hotel directly to book your room.
+
+<p>
+Registration for CIDR 2020 includes attendance to the conference, 3 nights
+of accommodation in the Mövenpick Hotel, as well as all meals during the
+conference.
+
+<p>
+The first week of registration will be open only for paper (co-)authors. 
+
+<p>
+Papers at CIDR are expected to be presented by an experienced author; the
+form will ask to indicate which paper(s) are authored plus speaker
+information.
+<p>
+Students have a reduced price, as indicated in the form (i.e., EUR 100.-
+lower).
+
+<p>
+At this time, partial day registration and off-site registration are not
+options.  You must register for all three days of the conference.  If you
+really need to, you can check-in after Sunday January 12 or check-out before
+Wednesday January 15, however, the total registration fee remains the same.
+
+<p>
+Participants may also arrive up to 3 nights before the conference or stay up
+to 3 nights afterward and will be charged the Mövenpick guest rate we
+negotiated for the conference.  That rate includes accommodation, taxes and
+breakfast, but no other meals.  These optional extra days can be specified
+in the registration form.
+
+<p>
+The registration offers the choice of three room types: (1) single room (one
+attendee), (2) double room (one attendee and one non-attending
+guest/companion), (3) shared room (two attendees sharing a room).  All fees
+are per attendee.  Fees for double room include accommodation and breakfast,
+only, for one guest/companion per room/attendee.  Guest/companions cannot
+take part in any conference activities.  For shared rooms, please specify
+your roommate during the registation process.
+
+<p>
+The registation allows you to specify dietary restrictions (if any).  We'll
+forward this information to the hotel to adjust their meals accordingly as
+far as possible.
+
+<p>
+You may cancel your registration for a full refund (minus a EUR 100.- fee)
+before December 12.  After that date, no refunds will be made.
+
+<p>
+Questions, concerns, comments: contact Stefan Manegold (CIDR Local
+Arrangments)
+
+<p>
+ Registration Fees (in Euro) per attendee
+ (incl. three nights of accommodation):
+
+<table style="width:100%">
+  <tr>
+    <th>[EUR]</th>
+    <th>single room</th>
+    <th>double room</th>
+    <th>shared room</th>
+  </tr>
+  <tr>
+    <td>regular</td>
+    <td style="text-align:right">980.-</td>
+    <td style="text-align:right">1,049.-</td>
+    <td style="text-align:right">770.-</td>
+  </tr>
+  <tr>
+        <td>student</td>
+    <td style="text-align:right">880.-</td>
+    <td style="text-align:right">949.-</td>
+    <td style="text-align:right">670.-</td>
+  </tr>
+</table>
+
+
+<p>
+ Rates (in Euro) for extra nights at the hotel:
+<br>
+  single-room: EUR 163.- (per night per room)
+<br>
+  double-room: EUR 186.- (per night per room)
+<br>
+  shared-room: EUR  93.- (per night per roommate)
 
 
 		</div>
