fixed missing links

--- a/cidr2020/cfp.html
+++ b/cidr2020/cfp.html
@@ -10,6 +10,44 @@
 <link rel="stylesheet" type="text/css"
 	href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
 <title>CIDR 2020 - Call For Papers</title>
+
+<script language="JavaScript">
+
+<!-- This script and many more are available free online at -->
+
+<!-- The JavaScript Source!! http://javascript.internet.com -->
+
+
+
+// Set up the image files to be used.
+
+var theImages = new Array() // do not change this
+
+// To add more image files, continue with the
+
+// pattern below, adding to the array.
+
+
+theImages[0] = 'img/CIDR_Amsterdam.jpg'
+
+// do not edit anything below this line
+
+var p = theImages.length;
+
+var whichImage = Math.round(Math.random()*(p-1));
+
+function showImage(){
+
+document.write('<div id="masthead">');
+
+document.write('<img src="' + theImages[whichImage] + '" alt="" width="760" height="200" /></a>');
+
+document.write('</div>');
+
+}
+
+
+</script>
 </head>
 
 <body>
