--- a/cidr2020/registration.html
+++ b/cidr2020/registration.html
@@ -13,70 +13,42 @@
 
 <script type="text/javascript" src="jquery-1.2.6.min.js"></script>
 <script language="JavaScript">
+
 <!-- This script and many more are available free online at -->
-	// Set up the image files to be used.
 
-	var theImages = new Array() // do not change this
+<!-- The JavaScript Source!! http://javascript.internet.com -->
 
-	// To add more image files, continue with the
 
-	// pattern below, adding to the array.
 
-	theImages[0] = 'img/hero-secondary-lg.jpg'
+// Set up the image files to be used.
 
-	// do not edit anything below this line
+var theImages = new Array() // do not change this
 
-	var p = theImages.length;
+// To add more image files, continue with the
 
-	var whichImage = Math.round(Math.random() * (p - 1));
+// pattern below, adding to the array.
 
-	function showImage() {
 
-		document.write('<div id="masthead">');
+theImages[0] = 'img/CIDR_Amsterdam.jpg'
 
-		document
-				.write('<img src="' + theImages[whichImage] + '" alt="" width="760" height="200" /></a>');
+// do not edit anything below this line
 
-		document.write('</div>');
+var p = theImages.length;
 
-	}
-	/*** 
-	 Simple jQuery Slideshow Script
-	 Released by Jon Raasch (jonraasch.com) under FreeBSD license: free to use or modify, not responsible for anything, etc.  Please link out to me if you like it :)
-	 ***/
+var whichImage = Math.round(Math.random()*(p-1));
 
-	function slideSwitch() {
-		var $active = $('#slideshow IMG.active');
+function showImage(){
 
-		if ($active.length == 0)
-			$active = $('#slideshow IMG:last');
+document.write('<div id="masthead">');
 
-		// use this to pull the images in the order they appear in the markup
-		var $next = $active.next().length ? $active.next()
-				: $('#slideshow IMG:first');
+document.write('<img src="' + theImages[whichImage] + '" alt="" width="760" height="200" /></a>');
 
-		// uncomment the 3 lines below to pull the images in random order
+document.write('</div>');
 
-		// var $sibs  = $active.siblings();
-		// var rndNum = Math.floor(Math.random() * $sibs.length );
-		// var $next  = $( $sibs[ rndNum ] );
+}
 
-		$active.addClass('last-active');
 
-		$next.css({
-			opacity : 0.0
-		}).addClass('active').animate({
-			opacity : 1.0
-		}, 1000, function() {
-			$active.removeClass('active last-active');
-		});
-	}
-
-	$(function() {
-		setInterval("slideSwitch()", 5000);
-	});
 </script>
-
 <style type="text/css">
 
 /*** set the width and height to match your images **/
@@ -173,7 +145,8 @@ CIDR 2020 will be held from Sunday, January 12, 2020, to Wednesday, January
 1019 BR Amsterdam, Netherlands.
 
 <p>
-To register for CIDR 2019 and to book your room at the <a href="https://eur.cvent.me/K1Q2">Mövenpick Hotel</a>.
+To register for CIDR 2019 and to book your room at the Mövenpick Hotel,
+<a href="https://eur.cvent.me/K1Q2"> please use this link</a>.
 
 
 <p>
