--- a/cidr2020/registration.html
+++ b/cidr2020/registration.html
@@ -238,6 +238,52 @@ Arrangments)
   double-room: EUR 186.- (per night per room)
 <br>
   shared-room: EUR  93.- (per night per roommate)
+  
+  
+  
+  
+  <h2>Visa Information</h2>
+  
+<p>
+Please consult this website: www.netherlandsandyou.nl to see whether you
+need a visa to enter The Netherlands, and apply well in advance if you need
+one.
+<p>
+We provide visa invitation letters to data management research/industry
+community members, or anyone who will credibly attend CIDR 2020.  Please
+contact CWI secretary Martine Anholt Gunzeln by email (M.Anholt.Gunzeln at
+cwi.nl) to apply for this service.  Please indicate in the email which
+accepted CIDR 2020 contribution (paper/abstract/demo) you are an author of. 
+If you are not an author, please explain your connection with CIDR 2020 or
+the data management research or industry community, if that is non-obvious. 
+We may ask you to register and pay for the conference first (in case the
+visa is denied, we would refund).
+<p>
+Some additional remarks:
+
+<ul>
+  <li>Most CIDR 2020 attendees would be interested in a short-stay visa, type
+ business - this matches the conference invitation letter.</li>
+  <li>When the visa application form asks for a contact person, this would be
+ Martine Anholt Gunzeln of CWI.  You can find address and phone number on
+ the letterhead of your invitation letter.</li>
+  <li>Martine tries to handle invitation letter requests quickly, it should take
+ just 2-3 business days.</li>
+ 
+ <li>The visa application process is organized differently, depending on where
+ you live.  This sometimes includes third parties (e.g., in the USA, it is
+ handled by an organization called vfsglobal).  Therefore, please carefully
+ read and follow the instructions on the NetherlandsAndYou website
+ mentioned above, which is the official one from The Netherlands.  Its
+ starts by asking you from where you are applying.</li>
+</ul>
+
+
+<p>
+Note for applicants resident in the USA: It has been reported that the web
+system of vfsglobal shows no appointments available.  Please call
++13473292738 or email them on netherlands.usa@vfshelpline.com if you hit
+this issue.
 
 
 		</div>
