updated hotel information

--- a/cidr2020/registration.html
+++ b/cidr2020/registration.html
@@ -154,9 +154,8 @@ NOTE: you must use the above link to register and to reserve a room, i.e., do no
 contact the Mövenpick Hotel directly to book your room.
 
 <p>
-Registration for CIDR 2020 includes attendance to the conference, 3 nights
-of accommodation in the Mövenpick Hotel, as well as all meals during the
-conference.
+Registration for CIDR 2020 includes attendance to the conference, 3 nights of accommodation in the Mövenpick Hotel, as well as all meals during the conference (from dinner on Sunday til lunch on Wednesday).
+
 
 <p>
 The first week of registration will be open only for paper (co-)authors. 
