updated according to Natashas comments

--- a/cidr2020/index.html
+++ b/cidr2020/index.html
@@ -74,7 +74,7 @@ document.write('</div>');
 			<li><a href="index.html">Home</a></li>
 			<li><a href="cfp.html">Call For Papers</a></li>
 			<li><a href="org.html">Organization</a></li>
-			<li><a href="program.html">Program and Papers</a></li>
+			<li><a href="program.html">Program</a></li>
 <!--						<li><a href="keynotespeakers.html">Keynotes</a></li> -->
 
 			<li><a href="registration.html">Venue and Registration</a></li>
@@ -120,23 +120,12 @@ document.write('</div>');
 		  CIDR was run every two years starting 2003, becoming the premier conference for practical data systems work. From 2020 on, the conference is organized every year, alternating between Amsterdam (even years) and the USA (odd years).  
 		  The Amsterdam venue of the conference is the Mövenpick hotel on the waterfront of the Amsterdam city center.
 		  	<p>
-		CIDR will retain its characteristics, such as single-track keynote, paper and demo presentations by senior authors as well as evening sessions, including gong show, and plenty of time for interaction. 
-		CIDR gathers researchers and practitioners from both academia and industry to discuss the latest innovative and visionary ideas in the field. 
-		Papers are invited on novel approaches to data systems architecture and usage. 
-		  <p>
-		  CIDR mainly encourages papers about innovative and risky data management system architecture ideas, systems-building experience and insight, resourceful experimental studies, provocative position statements. CIDR especially values innovation, experience-based insight, and vision. Authors are encouraged to submit their best systems work and are limited to submit at most two papers.
-
+		The CIDR program consists of single-track keynote, paper and demo presentations. There are also evening sessions, including a lively gong show, and plenty of time for interaction among the delegates, who are researchers and practitioners from both academia and industry. CIDR encourages papers about innovative and risky data management system architecture ideas, systems-building experience and insight, resourceful experimental studies, and provocative position statements. Papers are encouraged to present novel approaches to data systems architecture and usage, to inspire discussions on the latest innovative and visionary ideas in the field. Authors are encouraged to submit their best systems work, and are limited to submit at most two papers.
 
 				  
 		<p>
 
-		<h3>Important Dates</h3><b>(all deadlines are 11:59pm Pacific Time)</b>
-		<ul> 
-		<li><b>August 25, 2019: Submission deadline for all submissions</li>
-		<li><b>October 14, 2019: author notification for all submissions</li>
-		<li><b>December 16, 2019: camera-ready deadline for all submissions</li>
-		<li><b>January 12-15, 2020: conference</li>
-		<ul>
+		Please check the <a href="cfp.html">Call for Papers</a> for more information on important dates and submission guidelines.
                 
 <!--
 <br>
