--- a/cidr2020/keynotespeakers.html
+++ b/cidr2020/keynotespeakers.html
@@ -26,7 +26,7 @@
 			<li><a href="cfp.html">Call For Papers</a></li>
 			<li><a href="org.html">Organization</a></li>
 			<li><a href="keynotespeakers.html">Keynotes</a></li>
-			<li><a href="program.html">Program and Papers</a></li>
+			<li><a href="program.html">Program</a></li>
 			<li><a href="registration.html">Venue and Registration</a></li>
 <!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 			<li><a href="../index.html">Previous Conferences</a>
