--- a/cidr2020/org.html
+++ b/cidr2020/org.html
@@ -26,7 +26,7 @@
 			<li><a href="cfp.html">Call For Papers</a></li>
 			<li><a href="org.html">Organization</a></li>
 			<li><a href="keynotespeakers.html">Keynotes</a></li>
-			<li><a href="program.html">Program and Papers</a></li>			
+			<li><a href="program.html">Program</a></li>			
 			<li><a href="registration.html">Venue and Registration</a></li>
 <!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 			<li><a href="../index.html">Previous Conferences</a>
@@ -69,7 +69,7 @@
 	<div id="contentwide">
 		<h2>Conference Organization</h2>
 		<p>
-                  <h3>General Chair</h3>
+                  <h3>General Chairs</h3>
 		<ul> 
 		<li>Anastasia Ailamaki, EPFL</li>
 				<li>Michael Stonebraker, MIT</li>
