fixed typo in name

--- a/cidr2020/program.html
+++ b/cidr2020/program.html
@@ -126,7 +126,7 @@
 
 <span class="session-time">11:30 - 11:50</span>
 		<span class="session-talk"> White-box Compression: Learning and Exploiting Compact Table Representations </span>
-        <span class="session-presenter">Bogdan Guita (CWI); Diego Tomé (CWI)*; Peter Boncz (Centrum Wiskunde & Informatica)</span>
+        <span class="session-presenter">Bogdan Ghita (CWI); Diego Tomé (CWI)*; Peter Boncz (Centrum Wiskunde & Informatica)</span>
 
 <span class="session-time">11:50 - 12:10</span>
 		<span class="session-talk">BitGourmet: Deterministic Approximation via Optimized Bit Selection</span>
