--- a/cidr2020/program.html
+++ b/cidr2020/program.html
@@ -98,7 +98,9 @@
         <h3 class="session-title">Keynote 1</h3>
         <span class="session-location">(Room: Matterhorn Theater)</span>
         <span class="session-time">9:00 - 10:20</span>
-        <span class="session-presenter">Presenter</span>
+        <span class="session-presenter">Jonathan Holman
+(Head of Digital Transformation
+Santander Corporate & Commercial Banking)</span>
     </div>
     
     <h3 class="time-slot" style="grid-row: time-1000;">10:00am</h3>
@@ -384,7 +386,8 @@
         <h3 class="session-title">Keynote 2</h3>
         <span class="session-location">(Room: Matterhorn Theater)</span>
         <span class="session-time">9:00 - 10:00</span>
-        <span class="session-presenter">Presenter</span>
+        <span class="session-presenter">Franz Faerber
+(Ex Executive Vice President SAP)</span>
     </div>
     
     <h3 class="time-slot" style="grid-row: time-1000;">10:00am</h3>
