added keynote speakers

--- a/cidr2020/keynotespeakers.html
+++ b/cidr2020/keynotespeakers.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="Your Name" />
 	<link rel="stylesheet" type="text/css" href="andreas01.css" media="screen,projection" />
 	<link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
-	<title>CIDR 2019 - PROGRAM</title>
+	<title>CIDR 2020 - Keynotes</title>
 </head>
 
 <body>
@@ -63,9 +63,106 @@
 	  
           
 	 <h3>CIDR 2020 Keynote Speakers: </h3>
-	 
-TBA
-	 
+
+<h2 id="monday"><span style='font-family:"Calibri",sans-serif'>Monday Keynote: 9:00 am
+-10:00 am</span></h2>
+
+<p class=MsoNormal><img width=106 height=129 id="Picture 3"
+src="Keynote_speakers_content.fld/image001.jpg"
+alt="A person looking at the camera&#10;&#10;Description automatically generated"></p>
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
+normal'><span style='font-size:16.0pt'>Jonathan Holman, Head of Digital
+Transformation of Santander Corporate &amp; Commercial (UK)</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
+normal'><span style='font-size:16.0pt'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
+normal'><b><span style='font-size:16.0pt'>Title:</span></b><span
+style='color:black'><br>
+Big Data, AI and Banks - Uses Cases and Possibilities on the Ground<br>
+<br>
+</span><b><span style='font-size:16.0pt;color:black'>Abstract:</span></b><span
+style='color:black'><br>
+Jonathan will talk through the implication, benefits and practicalities of
+using big data and AI in a large regulated organisation which is also
+undergoing a digital transformation at the same time. He will also explore his
+credit risk, social data and machine learning research, which was a world
+first.<br>
+<br>
+</span><b><span style='font-size:16.0pt;color:black'>Bio:</span></b><span
+style='color:black'><br>
+Jonathan Holman is a corporate banking who runs Digital Transformation for SME,
+Commercial and Corporate in the UK. He is a mechanical engineer by
+undergraduate degree and he has masters' degree in banking. He has held roles
+in coverage (relationship banking), credit risk, operations, change and
+leadership. He researched and wrote his masters' degree dissertation on a global
+first, using scale social data in credit risk modelling, using AI. Jonathan's
+team and he have won 6 industry award in recent years for their work in banking
+technology.</span></p>
+
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
+normal'><span style='font-size:16.0pt'>&nbsp;</span></p>
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
+normal'><span style='font-size:16.0pt'>&nbsp;</span></p>
+<h2><span style='font-family:"Calibri",sans-serif'>&nbsp;</span></h2>
+
+<h2 id="wednesday"><span style='font-family:"Calibri",sans-serif'>
+Wednesday Keynote: 9:00 am
+-10:00 am                        </span></h2>
+
+<p class=MsoNormal><img width=98 height=130 id="Picture 7"
+src="Keynote_speakers_content.fld/image002.png"
+alt="A person wearing glasses and smiling at the camera&#10;&#10;Description automatically generated"></p>
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
+normal'><span style='font-size:16.0pt'>Franz Faerber</span></p>
+
+<p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><b><span
+style='font-size:16.0pt;line-height:115%'>Title:</span></b></p>
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
+style='font-size:11.5pt;line-height:115%;color:#333333'>Data management for
+enterprise applications</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><b><span
+style='font-size:16.0pt;line-height:115%;color:black'>&nbsp;</span></b></p>
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><b><span
+style='font-size:16.0pt;line-height:115%;color:black'>Abstract:</span></b></p>
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
+style='font-size:11.5pt;line-height:115%;color:#333333'>Enterprise applications
+such as Finance, Logistics, Supply Chaim Management or Customer Relationship
+Management are key stakeholders of database systems. In recent years they got
+much more attention in database community mainly cause of their scale and economic
+success. Data management systems like SAP HANA, Snowflake and others
+demonstrate the innovation need and potential in this area.  </span></p>
+
+<p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>This
+session recaps the success story of SAP HANA by focusing on the technology
+advances and general success criteria. The author will present his vision of
+the future role of data management in the enterprise stack in the light of the
+general move to the cloud and the actual programming paradigms. The focus is on
+a holistic view of the complete enterprise software stack, where data
+management should get an even more crucial role.</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><b><span
+style='font-size:16.0pt;line-height:115%;color:black'>Bio:</span></b></p>
+
+<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
+style='font-size:11.5pt;line-height:115%;color:#333333'>Franz Faerber has over
+25 years of experience in software research and development focusing on
+distributed systems, in-memory computing and data management. Joining SAP in
+1994 as a software developer, he has been one of the lead developers and
+architects of SAP HANA from its inception. He got multiple key positions in SAP
+HANA and overall data management organization. Currently he is in the process
+of leaving SAP. Franz holds a Bachelor degree (BA) in computer science and PhD(hc).
+</span></p>
 </div>
 </body>
 </html>
