--- a/cidr2020/program.html
+++ b/cidr2020/program.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="grid.css">
 	<link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
 	<title>CIDR 2020 - PROGRAM</title>
+	<style>
+    .link { color: #F0FFF0; } /* CSS link color */
+ 	</style>
 </head>
 
 <body>
@@ -98,9 +101,9 @@
         <h3 class="session-title">Keynote 1</h3>
         <span class="session-location">(Room: Matterhorn Theater)</span>
         <span class="session-time">9:00 - 10:00</span>
-        <span class="session-presenter">Jonathan Holman
+        <span class="keynote-presenter"> <a class = "link" href="keynotespeakers.html#monday">Jonathan Holman
 (Head of Digital Transformation
-Santander Corporate & Commercial Banking)</span>
+Santander Corporate & Commercial Banking) </a></span>
     </div>
     
     <h3 class="time-slot" style="grid-row: time-1000;">10:00am</h3>
@@ -386,8 +389,8 @@ Santander Corporate & Commercial Banking)</span>
         <h3 class="session-title">Keynote 2</h3>
         <span class="session-location">(Room: Matterhorn Theater)</span>
         <span class="session-time">9:00 - 10:00</span>
-        <span class="session-presenter">Franz Faerber
-(Ex Executive Vice President SAP)</span>
+        <span class="keynote-presenter"> <a class = "link" href="keynotespeakers.html#wednesday">Franz Faerber
+(Ex Executive Vice President SAP) </a></span>
     </div>
     
     <h3 class="time-slot" style="grid-row: time-1000;">10:00am</h3>
