--- a/cidr2020/program.html
+++ b/cidr2020/program.html
@@ -215,7 +215,8 @@ Santander Corporate & Commercial Banking) </a></span>
     
     <h3 class="time-slot" style="grid-row: time-1900;">07:00pm</h3>
     <div class="session session-9 track-1" style="grid-column: track-1; grid-row: time-1900 / time-2000;">
-        <h3 class="session-title"><a href="#">Gong Show</a></h3>
+        <h3 class="session-title"><a href="gongshow2020/gongshow.html">Gong Show</a></h3>
+        <span class="session-presenter"> Andy Pavlo (CMU)</span>
         <span class="session-location">(Room: Matterhorn Theater)</span>
         <span class="session-time">07:00 - 08:00</span>
     </div>
